--- a/sensors_scripts/CMakeLists.txt
+++ b/sensors_scripts/CMakeLists.txt
@@ -11,4 +11,7 @@ include_directories(${catkin_INCLUDE_DIRS})
 install(PROGRAMS scripts/run_velodyne.sh 
         DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+install(PROGRAMS scripts/garmin_setup.sh 
+        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 
