--- a/.gitmodules
+++ b/.gitmodules
@@ -4,13 +4,12 @@
 [submodule "turtlebot3"]
 	path = turtlebot3
 	url = https://github.com/ROBOTIS-GIT/turtlebot3.git
-[submodule "controls_stack"]
-	path = controls_stack
-	url = https://github.com/umigv/controls_stack.git
-	branch = gps_listener
-[submodule "garmin_gps"]
-	path = garmin_gps
-	url = https://github.com/umigv/garmin_gps.git
 [submodule "imu/imu_driver"]
 	path = imu/imu_driver
 	url = https://github.com/umigv/bno055_imu_driver.git
+[submodule "cartographer/cartographer"]
+	path = cartographer/cartographer
+	url = https://github.com/cartographer-project/cartographer.git
+[submodule "cartographer/cartographer_ros"]
+	path = cartographer/cartographer_ros
+	url = https://github.com/cartographer-project/cartographer_ros.git
